# GrainHex

./: .gitignore  CMakeLists.txt  GrainHex_Implementation_Instructions.md  GrainHex_PRD_V1.docx  README.md  UI_REDESIGN_PLAN.md  URGENT_TODO.md
Source/App/: Application.cpp  Application.h  Main.cpp  MainWindow.cpp  MainWindow.h
Source/Audio/: AudioEngine.cpp  AudioEngine.h  AudioTypes.h  ParameterSmoother.cpp  ParameterSmoother.h
Source/FX/: DistortionProcessor.h  EffectsChain.h  FilterProcessor.h
Source/Granular/: GrainScheduler.cpp  GrainScheduler.h  GrainVoice.cpp  GrainVoice.h  GranularEngine.cpp  GranularEngine.h  Interpolator.cpp  Interpolator.h  WindowFunctions.cpp  WindowFunctions.h
Source/MIDI/: MidiManager.h
Source/Modulation/: ADSREnvelope.h  LFO.h  ModulationEngine.h
Source/Resample/: ResampleEngine.cpp  ResampleEngine.h  WavExporter.h
Source/SourceInput/: AudioFileLoader.cpp  AudioFileLoader.h  FactorySamples.h  RootNoteDetector.cpp  RootNoteDetector.h  SourceSampleManager.cpp  SourceSampleManager.h
Source/Sub/: BiquadFilter.h  PitchDetector.cpp  PitchDetector.h  SubEngine.cpp  SubEngine.h  SubOscillator.h
Source/UI/: EffectsPanel.cpp  EffectsPanel.h  GrainHexLookAndFeel.h  GranularPanel.cpp  GranularPanel.h  MainEditor.cpp  MainEditor.h  ModulationPanel.cpp  ModulationPanel.h  ResamplePanel.cpp  ResamplePanel.h  SampleBrowser.h  SubPanel.cpp  SubPanel.h  WaveformView.cpp  WaveformView.h
